--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -6,10 +6,9 @@ source:
   url: https://github.com/ros-gbp/class_loader-release/archive/release/melodic/class_loader/0.4.1-0.tar.gz
   fn: ros-class-loader-0.4.1.tar.gz
   sha256: 09c3d35e5afb806c612e843ef15078b97a0a6051174a45712d38c38345eae4a5
-  patches:
 
 build:
-  number: 0
+  number: 1
   skip: true  # [win]
   run_exports:
     - {{ pin_subpackage('ros-class-loader', 'x.x') }}
@@ -27,14 +26,14 @@ requirements:
     - console_bridge
     - poco
     - ros-cmake-modules
-    - boost-cpp
+    - boost-cpp 1.68.*
     - ros-catkin
   run:
     - ros-conda-mutex * melodic
     - ros-conda-base
     - poco
     - console_bridge
-    - boost-cpp
+    - boost-cpp 1.68.*
 
 test:
   requires:
@@ -45,7 +44,7 @@ test:
 about:
   home: http://ros.org/wiki/class_loader
   summary: |
-    The class_loader package is a ROS-independent package for loading plugins during runtime and the
+    The class_loader package is a ROS-independent package for loading plugins during runtime.
   description: |
     The class_loader package is a ROS-independent package for loading plugins
     during runtime and the foundation of the higher level ROS "pluginlib"
